--- a/configs/aria2/aria2.conf
+++ b/configs/aria2/aria2.conf
@@ -13,11 +13,11 @@ rpc-listen-all=true
 #rpc-passwd=passwd
 
 #最大同时下载数(任务数), 路由建议值: 3
-max-concurrent-downloads=5
+max-concurrent-downloads=15
 #断点续传
 continue=true
 #同服务器连接数
-max-connection-per-server=5
+max-connection-per-server=15
 #最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
 min-split-size=10M
 #单文件最大线程数, 路由建议值: 5
@@ -68,7 +68,7 @@ enable-dht=false
 bt-enable-lpd=false
 enable-peer-exchange=false
 #修改特征
-user-agent=uTorrent/2210(25130)
+# user-agent=uTorrent/2210(25130)
 peer-id-prefix=-UT2210-
 #修改做种设置, 允许做种
 seed-ratio=0
@@ -81,3 +81,5 @@ bt-save-metadata=true
 #save-session-interval=60
 
 
+# 设置 UA 为 chrome 浏览器UA
+user-agent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.119 Safari/537.36
