--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -27,23 +27,26 @@ general {
 	#interval = 5
 #}
 order += "cpu_usage /"
-order += "disk /"
-order += "volume master"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "run_watch DHCP"
-order += "run_watch VPN"
-#order += "battery 1"
-order += "load"
+# order += "disk /"
+# order += "volume master"
+# order += "wireless _first_"
+# order += "ethernet _first_"
+# order += "run_watch DHCP"
+# order += "run_watch VPN"
+# order += "battery 1"
+# order += "load"
 order += "tztime local"
 
 ### CPU usage in %
 cpu_usage {
-  format = " CPU Usage: %usage "
+  # format = " CPU Usage: %usage "
+  format = " CPU: %usage "
 }
 
 wireless _first_ {
-        format_up = " (%essid - %quality) %ip"
+        # format_up = " (%essid - %quality) %ip"
+        # format_up = " %essid %ip"
+        format_up = " %essid"
         format_down = "down"
 }
 
@@ -89,11 +92,13 @@ run_watch VPN {
 }
 
 tztime local {
-        format = " %a %h %d, %Y %I:%M:%S %p"
+        # format = " %a %h %d, %Y %I:%M:%S %p"
+        format = " %a %h %d, %I:%M"
 }
 
 load {
-        format = " %1min %5min %15min"
+        # format = " %1min %5min %15min"
+        format = " %1min"
 }
 
 disk "/" {
