--- a/configs/link-files/polybar/config
+++ b/configs/link-files/polybar/config
@@ -223,24 +223,34 @@ ws-icon-36 = 36;6
 ws-icon-37 = 37;7
 ws-icon-38 = 38;8
 ws-icon-39 = 39;9
-ws-icon-40 = Chrome;Chrome
-ws-icon-41 = WIN;WIN
-ws-icon-42 = WX;WX
-ws-icon-43 = Android;Android
-ws-icon-44 = FOLDER;Folder
-ws-icon-45 = DOCS;Docs
-ws-icon-46 = PICS;Pics
-ws-icon-47 = NOTE;Note
-ws-icon-48 = AUDIO;Audio
-ws-icon-49 = ZEAL;Zeal
-ws-icon-50 = TMP;TMP
-ws-icon-51 = VIDEO;Video
-ws-icon-52 = HOME;HOME
-ws-icon-53 = PROX;PROX
-ws-icon-54 = MAIL;MAIL
-ws-icon-55 = DESKTOP;DESKTOP
-ws-icon-56 = UML;UML
-ws-icon-57 = XMIND;XMIND
+ws-icon-40 = 40;0
+ws-icon-41 = 41;0
+ws-icon-42 = 42;0
+ws-icon-43 = 43;0
+ws-icon-44 = 44;0
+ws-icon-45 = 45;0
+ws-icon-46 = 46;0
+ws-icon-47 = 47;0
+ws-icon-48 = 48;0
+ws-icon-49 = 49;0
+ws-icon-50 = Chrome;Chrome
+ws-icon-51 = WIN;WIN
+ws-icon-52 = WX;WX
+ws-icon-53 = Android;Android
+ws-icon-54 = FOLDER;Folder
+ws-icon-55 = DOCS;Docs
+ws-icon-56 = PICS;Pics
+ws-icon-57 = NOTE;Note
+ws-icon-58 = AUDIO;Audio
+ws-icon-59 = ZEAL;Zeal
+ws-icon-60 = TMP;TMP
+ws-icon-61 = VIDEO;Video
+ws-icon-62 = HOME;HOME
+ws-icon-63 = PROX;PROX
+ws-icon-64 = MAIL;MAIL
+ws-icon-65 = DESKTOP;DESKTOP
+ws-icon-66 = UML;UML
+ws-icon-67 = XMIND;XMIND
 ws-icon-default = 
 
 [module/xbacklight]
