--- a/configs/apt_proxy.conf
+++ b/configs/apt_proxy.conf
@@ -1,2 +1,1 @@
-Acquire::http::proxy "http://127.28.18.3:1080/";
-Acquire::https::proxy "https://127.28.18.3:1080/";
+Acquire::socks5::proxy "http://127.0.0.1:1080/";
