--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -28,18 +28,18 @@ general {
 #}
 order += "cpu_usage /"
 order += "disk /"
-order += "volume master"
-order += "wireless _first_"
+# order += "volume master"
+# order += "wireless _first_"
 order += "ethernet _first_"
-order += "run_watch DHCP"
-order += "run_watch VPN"
+# order += "run_watch DHCP"
+# order += "run_watch VPN"
 #order += "battery 1"
 order += "load"
 order += "tztime local"
 
 ### CPU usage in %
 cpu_usage {
-  format = " CPU Usage: %usage "
+  format = " CPU: %usage "
 }
 
 wireless _first_ {
@@ -49,7 +49,9 @@ wireless _first_ {
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
+        # format_up = "E: %ip (%speed)"
+        # format_up = "E: %ip"
+        format_up = "%ip"
         format_down = "E: down"
 }
 
