--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -28,19 +28,19 @@ general {
 #}
 order += "cpu_usage /"
 order += "disk /"
-order += "volume master"
-order += "wireless _first_"
+# order += "volume master"
+# order += "wireless _first_"
 order += "ethernet _first_"
-order += "run_watch DHCP"
-order += "run_watch SSR"
-order += "run_watch POLIPO"
+# order += "run_watch DHCP"
+# order += "run_watch SSR"
+# order += "run_watch POLIPO"
 #order += "battery 1"
 order += "load"
 order += "tztime local"
 
 ### CPU usage in %
 cpu_usage {
-	format = "CPU: %usage"
+	format = "CPU: %usage"
 }
 
 wireless _first_ {
@@ -48,9 +48,14 @@ wireless _first_ {
 		format_down = "down"
 }
 
+# ethernet _first_ {
+# # if you use %speed, i3status requires root privileges
+# 	format_up = ": %ip (%speed)"
+# 		format_down = ": down"
+# }
 ethernet _first_ {
 # if you use %speed, i3status requires root privileges
-	format_up = ": %ip (%speed)"
+	format_up = ": %ip"
 		format_down = ": down"
 }
 
@@ -98,12 +103,18 @@ run_watch VPN {
 	pidfile = "/var/run/vpnc/pid"
 }
 
+# tztime local {
+# 	format = " %a %h %d, %Y %I:%M:%S %p"
+# }
 tztime local {
-	format = " %a %h %d, %Y %I:%M:%S %p"
+	format = " %a %h%d %I:%M"
 }
 
+# load {
+# 	format = " %1min %5min %15min"
+# }
 load {
-	format = " %1min %5min %15min"
+	format = " %1min"
 }
 
 disk "/" {
