--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -29,8 +29,8 @@ general {
 order += "cpu_usage /"
 order += "disk /"
 # order += "volume master"
-# order += "wireless _first_"
-order += "ethernet _first_"
+order += "wireless _first_"
+# order += "ethernet _first_"
 # order += "run_watch DHCP"
 # order += "run_watch SSR"
 # order += "run_watch POLIPO"
