--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -26,7 +26,7 @@ general {
 	#color_degraded = "#55858E"
 	#interval = 5
 #}
-order += "cpu_usage /"
+# order += "cpu_usage /"
 # order += "disk /"
 # order += "volume master"
 # order += "wireless _first_"
@@ -36,6 +36,7 @@ order += "cpu_usage /"
 # order += "battery 1"
 # order += "load"
 order += "tztime local"
+# order += ""
 
 ### CPU usage in %
 cpu_usage {
@@ -93,7 +94,8 @@ run_watch VPN {
 
 tztime local {
         # format = " %a %h %d, %Y %I:%M:%S %p"
-        format = " %a %h %d, %I:%M"
+        # format = " %a %h %d, %I:%M"
+        format = "%I:%M"
 }
 
 load {
