--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -94,8 +94,8 @@ run_watch VPN {
 
 tztime local {
         # format = " %a %h %d, %Y %I:%M:%S %p"
-        # format = " %a %h %d, %I:%M"
-        format = "%h%d  %I:%M"
+        format = " %a %h%d %I:%M"
+        # format = "%h%d  %I:%M"
         # format = "%I:%M"
 }
 
